# TanksOfWorld

./: .clang-format  .gitignore  TanksOfWorld.project  launch_debug.bat  launch_editor.bat  launch_release.bat
data/: Bot1.node  Bot2.node  Cursor.mesh  Cursor.node  Gun.mesh  Hull.mesh  Player.node  TanksOfWorld.world  Tower.mesh  health_bar.mat  reload_bar.mat  tank_material.mat  tank_team_1.mat  tank_team_2.mat
data/ComponentSystem/: GameController.prop  HealthBar.prop  PlayerController.prop  ReloadBar.prop  TankBot.prop  TankController.prop
data/configs/: default.boot  editor.boot
data/template_assets/template_render_settings/: aim_cursor.mat  cursor.mat  template_low.render
source/: AppSystemLogic.cpp  AppWorldLogic.cpp  CMakeLists.txt
source/Components/: GameController.cpp  GameController.h  PlayerController.cpp  PlayerController.h  TankController.cpp  TankController.h
source/Components/Bars/: HealthBar.cpp  HealthBar.h  ReloadBar.cpp  ReloadBar.h
source/Components/Related/: Projectile.cpp  Projectile.h
source/Components/TankBot/: BotState.cpp  BotState.h  BotStateFindEnemy.cpp  BotStateFindEnemy.h  BotStateKillEnemy.cpp  BotStateKillEnemy.h  TankBot.cpp  TankBot.h
